Fix full size interactive map bug (overflow: hidden)

--- a/src/components/Navigation_component/Navigation_component.css
+++ b/src/components/Navigation_component/Navigation_component.css
@@ -26,6 +26,7 @@
   width: 100vw;
   gap: 20px;
   background-color: white;
+  border-bottom: solid black 1px;
 }
 
 .extra-bold {
